Use pipeline library.

--- a/jenkins.properties
+++ b/jenkins.properties
@@ -1,3 +1,1 @@
-publish=true
-publish.tagged.only=false
-gradle.refresh.dependencies=true
+upstreamProjects=../coronium/develop,../log/develop,../pie/develop,../spoofax/develop
